[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assests/Fonts/OpenSans/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Assests/Materials/Ready_XMark.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.74902 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -984.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 560.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 64.0
margin_top = 200.0
margin_right = 960.0
margin_bottom = 204.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_Label" type="Label" parent="."]
margin_left = 80.0
margin_top = 216.0
margin_right = 160.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 2 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_Field" type="TextEdit" parent="."]
margin_left = 168.0
margin_top = 216.0
margin_right = 360.0
margin_bottom = 256.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
context_menu_enabled = false
shortcut_keys_enabled = false
caret_block_mode = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP_Label" type="Label" parent="."]
margin_left = 376.0
margin_top = 216.0
margin_right = 508.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 2 )
text = "IP Address:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP_Address" type="TextEdit" parent="."]
margin_left = 516.0
margin_top = 216.0
margin_right = 708.0
margin_bottom = 256.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "98.4.160.55"
context_menu_enabled = false
shortcut_keys_enabled = false
caret_block_mode = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HostButton" type="Button" parent="."]
margin_left = 80.0
margin_top = 280.0
margin_right = 504.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyButton" type="Button" parent="."]
visible = false
margin_left = 80.0
margin_top = 280.0
margin_right = 504.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Ready"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="."]
margin_left = 520.0
margin_top = 280.0
margin_right = 944.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectButton" type="Button" parent="."]
visible = false
margin_left = 520.0
margin_top = 280.0
margin_right = 944.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersButton" type="Button" parent="."]
margin_left = 719.0
margin_top = 216.0
margin_right = 943.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "Player List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 64.0
margin_top = 400.0
margin_right = 960.0
margin_bottom = 404.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 80.0
margin_top = 408.0
margin_right = 944.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PlayerList"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerList"]
margin_left = 104.0
margin_top = 64.0
margin_right = 221.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 5 )
text = "Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="PlayerList"]
margin_left = 80.0
margin_top = 120.0
margin_right = 944.0
margin_bottom = 475.0
custom_fonts/font = SubResource( 6 )
max_columns = 2
same_column_width = true
fixed_column_width = 300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="PlayerList"]
margin_left = 400.0
margin_top = 496.0
margin_right = 624.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 4 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Resume" to="." method="unpause"]
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="PlayersButton" to="." method="_toggle_player_list"]
[connection signal="pressed" from="Quit" to="." method="quit_game"]
[connection signal="pressed" from="PlayerList/CloseButton" to="." method="_toggle_player_list"]
